src/patternfly/components/Wizard/wizard.scss
/* ... */
.#{$wizard}__nav {
  position: absolute;
 inset-block-start: 0;
 inset-inline-start: 0;
  z-index: var(--#{$wizard}__nav--ZIndex);
  display: none;
  width: var(--#{$wizard}__nav--Width);
  max-height: 100%;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-color: var(--#{$wizard}__nav--BackgroundColor);
  box-shadow: var(--#{$wizard}__nav--BoxShadow);

  &.pf-m-expanded {
    display: block;
  }

  @media screen and (min-width: $pf-v6-global--breakpoint--lg) {
    display: block;
    height: 100%;
    border-inline-end: var(--#{$wizard}__nav--lg--BorderInlineEndWidth) solid var(--#{$wizard}__nav--lg--BorderInlineEndColor);
  }
}

.#{$wizard}__nav-list {
  padding-block-start: var(--#{$wizard}__nav-list--PaddingBlockStart);
  padding-block-end: var(--#{$wizard}__nav-list--PaddingBlockEnd);
  padding-inline-start: var(--#{$wizard}__nav-list--PaddingInlineStart);
  padding-inline-end: var(--#{$wizard}__nav-list--PaddingInlineEnd);
  list-style: none;
  counter-reset: wizard-nav-count;

  // Nested sub menus
  & & {
    padding: 0;
    margin-block-start: var(--#{$wizard}__nav-list--nested--MarginBlockStart);
    margin-inline-start: var(--#{$wizard}__nav-list--nested--MarginInlineStart);

    // Reset styles for nested nav links
    .#{$wizard}__nav-link {
      &::before {
        content: none;
      }

      &.pf-m-current {
        font-weight: var(--#{$wizard}__nav-list__nav-list__nav-link--m-current--FontWeight);
      }
    }
  }
}

.#{$wizard}__nav-item {
  & + & {
    margin-block-start: var(--#{$wizard}__nav-item--MarginBlockStart);
  }

  &.pf-m-expandable {
    > .#{$wizard}__nav-link {
      display: flex;
    }

    > .#{$wizard}__nav-list {
      display: none;
    }
  }

  &.pf-m-expanded {
    > .#{$wizard}__nav-list {
      display: block;
    }

    > .#{$wizard}__nav-link {
      --#{$wizard}__nav-link-toggle-icon--Rotate: var(--#{$wizard}__nav-item--m-expanded__link-toggle-icon--Rotate);
    }
  }
}

.#{$wizard}__nav-link {
  position: relative;
  display: flex;
  gap: var(--#{$wizard}__nav-link--Gap);
  width: 100%;
  padding-inline: 0;
  color: var(--#{$wizard}__nav-link--Color);
  text-align: start; // needed for when the item is a button
  text-decoration-line: var(--#{$wizard}__nav-link--TextDecoration);
  word-break: break-word;
  counter-increment: wizard-nav-count;
  background-color: transparent;
  border: none;
  border-radius: var(--#{$wizard}__nav-link--BorderRadius);

  // Common step number styles
  @at-root .#{$wizard}__toggle-num,
  &::before {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: var(--#{$wizard}__nav-link--before--Width);
    height: var(--#{$wizard}__nav-link--before--Height);
    font-size: var(--#{$wizard}__nav-link--before--FontSize);
    line-height: 1;
    color: var(--#{$wizard}__nav-link--before--Color);
    background-color: var(--#{$wizard}__nav-link--before--BackgroundColor);
    border-radius: var(--#{$wizard}__nav-link--before--BorderRadius);
  }

  // Nav step number
  &::before {
    inset-block-start:  var(--#{$wizard}__nav-link--before--InsetBlockStart); // 8px; // TODO variable
    content: counter(wizard-nav-count);
}

  &.pf-m-current {
    --#{$wizard}__nav-link--Color: var(--#{$wizard}__nav-link--m-current--Color);
    --#{$wizard}__nav-link-main--BackgroundColor: var(--#{$wizard}__nav-link--m-current--BackgroundColor);

    @at-root .#{$wizard}__toggle-num,
    &::before {
      --#{$wizard}__nav-link--before--BackgroundColor: var(--#{$wizard}__nav-link--m-current--before--BackgroundColor);
      --#{$wizard}__nav-link--before--Color: var(--#{$wizard}__nav-link--m-current--before--Color);
    }
  }

  &:is(.pf-m-success, .pf-m-danger) {
    &::before {
      display: none;
    }
  }

  &.pf-m-success {
    --#{$wizard}__nav-link-status-icon--Color: var(--#{$wizard}__nav-link--m-success__nav-link-status-icon--Color);
  }

  &.pf-m-danger {
    --#{$wizard}__nav-link-status-icon--Color: var(--#{$wizard}__nav-link--m-danger__nav-link-status-icon--Color);
  }

  &:where(:hover, :focus) {
    --#{$wizard}__nav-link--Color: var(--#{$wizard}__nav-link--hover--Color);
    --#{$wizard}__nav-link-main--BackgroundColor: var(--#{$wizard}__nav-link--hover--BackgroundColor);
  }

  // override the button background/color for disabled nav links
  &:disabled,
  &.pf-m-disabled {
    --#{$wizard}__nav-link--Color: var(--#{$wizard}__nav-link--m-disabled--Color);
    --#{$wizard}__nav-link-main--BackgroundColor: var(--#{$wizard}__nav-link--m-disabled--BackgroundColor);

    pointer-events: none;

    &::before {
      --#{$wizard}__nav-link--before--BackgroundColor: var(--#{$wizard}__nav-link--m-disabled--before--BackgroundColor);
      --#{$wizard}__nav-link--before--Color: var(--#{$wizard}__nav-link--m-disabled--before--Color);
    }
  }
}

.#{$wizard}__nav-link-text {
  flex-grow: 1;
}

.#{$wizard}__nav-link-main {
  display: flex;
  justify-content: space-between;
  padding-block-start: var(--#{$wizard}__nav-link-main--PaddingBlockStart);
  padding-block-end: var(--#{$wizard}__nav-link-main--PaddingBlockEnd);
  padding-inline-start: var(--#{$wizard}__nav-link-main--PaddingInlineStart);
  padding-inline-end: var(--#{$wizard}__nav-link-main--PaddingInlineEnd);
  background-color: var(--#{$wizard}__nav-link-main--BackgroundColor);
  border: none;
  border-radius: var(--#{$wizard}__nav-link-main--BorderRadius);
}

.#{$wizard}__nav-link-status-icon {
  position: relative;
  inset-block-start: var(--#{$wizard}__nav-link-status-icon--InsetBlockStart);
  font-size: var(--#{$wizard}__nav-link-status-icon--FontSize);
  color: var(--#{$wizard}__nav-link-status-icon--Color);
}

.#{$wizard}__nav-link-toggle {
  padding-inline-start: var(--#{$wizard}__nav-link-toggle--PaddingInlineStart);
  padding-inline-end: var(--#{$wizard}__nav-link-toggle--PaddingInlineEnd);
  color: var(--#{$wizard}__nav-link-toggle--Color);
}
/* ... */

